Fixed System Settings text not wrapping correctly

--- a/DemoUI/css/lists.css
+++ b/DemoUI/css/lists.css
@@ -153,7 +153,8 @@ li a:active {
 
 [data-type="list"] li p:only-child,
 [data-type="list"] li p:first-of-type:last-of-type {
-  line-height: 4rem;
+  line-height: 1.5em;
+  white-space: normal;
 }
 
 [data-type="list"] li p em {
